fix: abstract user with channel as a valid type
